--- a/assets/css/single-products-style.css
+++ b/assets/css/single-products-style.css
@@ -10,8 +10,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 19px;
-    padding: 20px 20px;
+    margin-top: 0px;
+    padding-top:  40px ;
+    padding-bottom:  20px;
+    padding-right: 20px;
+    padding-left: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -379,7 +382,7 @@ body {
     height: 0;
 }
 
-/*media queries for responsiveness*/
+/* Media Queries for responsiveness */
 @media (min-width: 1024px) {
     .header img {
         margin-left: 10px;
