--- a/assets/css/about-us-style.css
+++ b/assets/css/about-us-style.css
@@ -227,6 +227,7 @@ body {
     display: flex;
     flex-wrap: wrap; 
     justify-content: center;
+    flex-direction: column;
 }
 
 
@@ -238,8 +239,9 @@ body {
     align-items: center; 
 }
 
-.filipina-text-container {
-    margin-bottom: 100PX; 
+.filipina-text-container{
+    margin-top: -160px;
+    margin-bottom: 100px; 
     padding: 0 10px; 
 }
 
@@ -253,15 +255,16 @@ body {
     font-size: 25px;
     max-width: 800px;
     margin: 0 auto;
-    margin-bottom: -50px; 
+    margin-bottom: -100px; 
 }
 
 .filipina-image-container {
+    width: 100%; 
+    height: auto; 
     display: flex;
-    justify-content: center;
-    margin-top: -70px; 
-    margin-bottom: 70px;
-    position: relative; 
+    align-items: center;
+    justify-content: center; 
+    margin-top: -100px;
 }
 
 .filipina-image-container img {
@@ -269,9 +272,6 @@ body {
     height: auto;
     object-fit: cover; 
 }
-
-
-
 
 
 .footer {
