--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: weight;
+    font-weight: normal;
     font-style: normal;
     font-variation-settings: "width" 100;
     margin: 0;
