--- a/assets/css/about-us-style.css
+++ b/assets/css/about-us-style.css
@@ -127,7 +127,7 @@ body {
 }
 
 .banner-image-container {
-    flex: 1;
+    flex: 1;    
     display: flex;
     justify-content: flex-end;
     align-items: center; 
@@ -135,12 +135,13 @@ body {
 }
 
 .banner-image-container img {
-    max-width: 100%; 
+    max-width: 60%; 
     height: auto; 
     display: block;
 }
 
 .banner-text-container h1 {
+    font-weight: bolder;
     font-size: 60px; 
     margin-bottom: 10px;
 }
@@ -151,8 +152,6 @@ body {
     margin-top: 0;
     margin-bottom: 20px;
 }
-
-
 
 .nothing-content-section {
     background-color: #D21885;
@@ -189,8 +188,6 @@ body {
     height: auto;
     display: block;
 }
-
-
 
 .history-content-section {
     background-color: #D21885;
@@ -230,15 +227,15 @@ body {
 .filipina-image-container {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content:flex-end ;
     align-items: center;
     margin-right: 40px;
     flex-shrink: 0; 
 }
 
 .filipina-image-container img {
-    max-width: 350%; 
-    height: auto;
+    max-width: 85vw; 
+    height: 75vh;
     display: block;
 }
 
@@ -418,6 +415,24 @@ body {
         left: 0; 
         margin-left: 0;
     }
+    .banner-content-section {
+        flex-direction: row;
+    }
+    .banner-text-container {
+        max-width: 50%;
+    }
+    .banner-image-container {
+        max-width: 50%;
+    }
+    .filipina-content-section {
+        flex-direction: row;
+    }
+    .filipina-text-container {
+        max-width: 50%;
+    }
+    .filipina-image-container {
+        max-width: 50%;
+    }
     .footer .container {
         justify-content: center;
     }
@@ -456,11 +471,11 @@ body {
         padding: 0;
         margin-top: 15px;;
         padding-bottom: 8px;
-        margin-left: 30px;
     }
     .header img {
         margin-top: 10px;
         max-height: 50px;
+        margin-right: 65px;
     }
     .nav {
         flex-direction: row;
@@ -479,7 +494,56 @@ body {
     .golden-section {
         padding: 10px 0;
     }
-    
+    .banner-content-section {
+        flex-direction: row;
+        align-items: center;
+        text-align: left;
+    }
+    .banner-image-container {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+    }
+    .banner-text-container {
+        text-align: left;
+        flex: 1;
+        align-items: center;
+    }
+    .nothing-content-section {
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+    }
+    .nothing-image-container {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+    }
+    .nothing-text-container {
+        text-align: center;
+        flex: 1;
+    }
+    .filipina-content-section {
+        flex-direction: row;
+        align-items: center;
+        text-align: left;
+    }
+    .filipina-image-container {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+        margin-left: 30px;
+        max-width: 100%;
+        overflow: hidden;
+    }
+    .filipina-image-container img {
+        max-width: 100%;
+        height: auto;
+    }
+    .filipina-text-container {
+        text-align: left;
+        flex: 1;
+    }
     .footer .container {
         justify-content: space-between;
         padding: 0 50px;
@@ -494,18 +558,19 @@ body {
     .footer .join-pack h3 {
         font-size: 18px;
         margin-bottom: 10px;
-        margin-top: 10px;;
+        margin-top: 10px;
         text-align: center; 
     }
     .footer .shop-now img {
         margin: 0 auto; 
         height: 50px; 
     }
+    .footer .join-pack input,
     .footer .join-pack button {
-        width: 100%; 
-    }
-    .footer .join-pack input {
-        width: 100%; 
+        width: 100%;
+        max-width: 100%;
+        margin: 10px 0; 
+        box-sizing: border-box; 
     }
     .golden-line-footer {
         height: 4px;
@@ -548,14 +613,50 @@ body {
     .search-bar input {
         width: calc(100% - 30px); 
     }
+    .banner-content-section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .banner-text-container {
+        max-width: 100%;
+        text-align: center;
+    }
+    .banner-image-container {
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .nothing-content-section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .nothing-text-container {
+        max-width: 100%;
+        text-align: center;
+    }
+    .nothing-image-container {
+        max-width: 100%;
+    }
+
+    .filipina-content-section {
+        flex-direction: column;
+        align-items: center;
+    }
+    .filipina-text-container {
+        max-width: 100%;
+        text-align: center;
+    }
+    .filipina-image-container {
+        max-width: 100%;
+        display: flex;
+        margin-left: 38px;
+        justify-content: center;
+    }
     .golden-section {
         margin-top: 0;
         padding: 20px 0px;
         height: 0;
-    }
-    .footer .container {
-        flex-direction: column;
-        text-align: center;
     }
     .footer .container div {
         margin: 10px 0;
@@ -563,10 +664,58 @@ body {
     .footer .join-pack input,
     .footer .join-pack button {
         width: 100%;
-        margin-left: 10px;
+        max-width: 100%;
+        margin: 10px 0; 
+        box-sizing: border-box; 
     }
     .social-icons i {
         font-size: 20px;
         margin: 0 5px;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 766px) { 
+    .banner-content-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .banner-image-container {
+        display: flex;
+        justify-content: center;
+    }
+    .banner-text-container {
+        text-align: center;
+    }
+    .nothing-content-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .nothing-image-container {
+        display: flex;
+        justify-content: center;
+    }
+    .nothing-text-container {
+        text-align: center;
+    }
+    .filipina-content-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .filipina-image-container {
+        display: flex;
+        justify-content: center;
+    }
+    .filipina-text-container {
+        text-align: center;
+    } 
+    .footer .join-pack input,
+    .footer .join-pack button {
+        width: 100%;
+        max-width: 100%;
+        margin: 10px 0; 
+        box-sizing: border-box; 
     }
 }
