--- a/assets/css/single-products-style.css
+++ b/assets/css/single-products-style.css
@@ -398,13 +398,14 @@ body {
         justify-content: center;
         gap: 20px;
     }
-    .
-card1 {
-width: 100%;
-}
-.card1 img {
-width: 50%;
-}
+    
+    .card1 {
+        width: 100%;
+    }
+    
+    .card1 img {
+        width: 50%;
+    }
 }
 
 @media (max-width: 1023px) {
